--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/bench.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/bench.yml
@@ -8,7 +8,7 @@
   categories: [ ForkFiltered ]
   components:
   - type: Transform
-    anchored: false
+    anchored: true
   - type: Rotatable
   - type: Sprite
     sprite: _CP14/Structures/Furniture/bench.rsi
