--- a/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
+++ b/Resources/Prototypes/_CP14/Loadouts/Jobs/general.yml
@@ -11,6 +11,7 @@
   - CP14ClothingCloakRitualAttireLeather
   - CP14ClothingCloakWhite
   - CP14ClothingCloakGreen
+  - CP14ClothingCloakBlue
 
 - type: loadout
   id: CP14ClothingCloakFurcapeBlack
@@ -41,6 +42,11 @@
   id: CP14ClothingCloakGreen
   equipment:
     cloak: CP14ClothingCloakGreen
+
+- type: loadout
+  id: CP14ClothingCloakBlue
+  equipment:
+    cloak: CP14ClothingCloakBlue
 
 # Eyes
 
@@ -174,7 +180,15 @@
   - CP14ClothingPantsTrouserDarkBlue
   - CP14ClothingPantsAristocratic
   - CP14ClothingPantsLoincloth
-  - CP14ClothingDressBlack
+  - CP14ClothingPantsGreen
+  - CP14ClothingPantsBrown
+  # Dress
+  - CP14ClothingPantsDressBlack
+  - CP14ClothingPantsDressBlue
+  - CP14ClothingPantsDressBrown
+  - CP14ClothingPantsDressGreen
+  - CP14ClothingPantsDressGreenBelt
+  - CP14ClothingPantsDressRed
 
 - type: loadout
   id: CP14ClothingPantsTrouserWhite
@@ -197,9 +211,49 @@
     pants: CP14ClothingPantsLoincloth
 
 - type: loadout
-  id: CP14ClothingDressBlack
+  id: CP14ClothingPantsGreen
   equipment:
-    pants: CP14ClothingDressBlack
+    pants: CP14ClothingPantsGreen
+
+- type: loadout
+  id: CP14ClothingPantsBrown
+  equipment:
+    pants: CP14ClothingPantsBrown
+
+- type: loadout
+  id: CP14ClothingPantsDressBlack
+  equipment:
+    pants: CP14ClothingPantsDressBlack
+
+- type: loadout
+  id: CP14ClothingPantsDressBlue
+  equipment:
+    pants: CP14ClothingPantsDressBlue
+
+- type: loadout
+  id: CP14ClothingPantsDressBrown 
+  equipment:
+    pants: CP14ClothingPantsDressBrown
+
+- type: loadout
+  id: CP14ClothingPantsDressGreen
+  equipment:
+    pants: CP14ClothingPantsDressGreen
+
+- type: loadout
+  id: CP14ClothingPantsDressGreenBelt
+  equipment:
+    pants: CP14ClothingPantsDressGreenBelt
+
+- type: loadout
+  id: CP14ClothingPantsDressRed
+  equipment:
+    pants: CP14ClothingPantsDressRed
+
+- type: loadout
+  id: CP14ClothingPantsDressYellow
+  equipment:
+    pants: CP14ClothingPantsDressYellow
 
 # Shirt
 
@@ -207,17 +261,29 @@
   id: CP14GeneralShirt
   name: cp14-loadout-general-shirt
   loadouts:
-  - CP14ClothingShirtCottonWhite
-  - CP14ClothingShirtCottonBlue
   - CP14ClothingShirtCottonBlack
+  - CP14ClothingShirtCottonBlue
+  - CP14ClothingShirtCottonBlueCollar
+  - CP14ClothingShirtBlueOpen
+  - CP14ClothingShirtRedOpen
+  - CP14ClothingShirtYellowOpen
   - CP14ClothingShirtCottonPurple
   - CP14ClothingShirtCottonRed
+  - CP14ClothingShirtCottonWhite
+  - CP14ClothingShirtCottonWhiteBelt
+  - CP14ClothingShirtCottonWhiteBrownVest
+  - CP14ClothingShirtCottonWhiteBrownVest2
+  - CP14ClothingShirtCottonWhiteBrownVest3
+  - CP14ClothingShirtCottonWhiteCollar
+  - CP14ClothingShirtCottonWhiteGreenVest
+  - CP14ClothingShirtCottonWhiteGreenVest2
   - CP14ClothingShirtCottonYellow
+  - CP14ClothingShirtCottonYellowCollar
 
 - type: loadout
-  id: CP14ClothingShirtCottonWhite
+  id: CP14ClothingShirtCottonBlack
   equipment:
-    shirt: CP14ClothingShirtCottonWhite
+    shirt: CP14ClothingShirtCottonBlack
 
 - type: loadout
   id: CP14ClothingShirtCottonBlue
@@ -225,9 +291,24 @@
     shirt: CP14ClothingShirtCottonBlue
 
 - type: loadout
-  id: CP14ClothingShirtCottonBlack
+  id: CP14ClothingShirtCottonBlueCollar
   equipment:
-    shirt: CP14ClothingShirtCottonBlack
+    shirt: CP14ClothingShirtCottonBlueCollar
+
+- type: loadout
+  id: CP14ClothingShirtBlueOpen
+  equipment:
+    shirt: CP14ClothingShirtBlueOpen
+
+- type: loadout
+  id: CP14ClothingShirtRedOpen
+  equipment:
+    shirt: CP14ClothingShirtRedOpen
+
+- type: loadout
+  id: CP14ClothingShirtYellowOpen
+  equipment:
+    shirt: CP14ClothingShirtYellowOpen
 
 - type: loadout
   id: CP14ClothingShirtCottonPurple
@@ -240,9 +321,54 @@
     shirt: CP14ClothingShirtCottonRed
 
 - type: loadout
+  id: CP14ClothingShirtCottonWhite
+  equipment:
+    shirt: CP14ClothingShirtCottonWhite
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteBelt
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteBelt
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteBrownVest
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteBrownVest
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteBrownVest2
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteBrownVest2
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteBrownVest3
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteBrownVest3
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteCollar
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteCollar
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteGreenVest
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteGreenVest
+
+- type: loadout
+  id: CP14ClothingShirtCottonWhiteGreenVest2
+  equipment:
+    shirt: CP14ClothingShirtCottonWhiteGreenVest2
+
+- type: loadout
   id: CP14ClothingShirtCottonYellow
   equipment:
     shirt: CP14ClothingShirtCottonYellow
+
+- type: loadout
+  id: CP14ClothingShirtCottonYellowCollar
+  equipment:
+    shirt: CP14ClothingShirtCottonYellowCollar
 
 # Shoes
 
