--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
@@ -7,7 +7,7 @@
   components:
   - type: NpcFactionMember
     factions:
-    - CP14Undead
+    - CP14Monster
   - type: Loadout
     prototypes: 
     - CP14MobSkeleton
