--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/zombie.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/zombie.yml
@@ -15,7 +15,7 @@
         true
   - type: NpcFactionMember
     factions:
-    - CP14Undead
+    - CP14Monster
 
 - type: entity
   id: CP14MobUndeadZombieGearEasy1
