clean up and renaming to knowledge

--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/base.yml
@@ -311,7 +311,7 @@
         Asphyxiation: -1.0
   - type: FireVisuals
     alternateState: Standing #TODO - custom visuals
-  - type: CP14SkillsStorage
+  - type: CP14KnowledgeStorage
 
 - type: entity
   save: false
