--- a/Resources/Prototypes/_CP14/Knowledge/knowledges.yml
+++ b/Resources/Prototypes/_CP14/Knowledge/knowledges.yml
@@ -1,19 +1,19 @@
-- type: CP14Skill
+- type: CP14Knowledge
   id: Alchemy
   name: cp14-skill-name-alchemy
   desc: cp14-skill-desc-alchemy
 
-- type: CP14Skill
+- type: CP14Knowledge
   id: Blacksmith
   name: cp14-skill-name-blacksmith
   desc: cp14-skill-desc-blacksmith
 
-- type: CP14Skill
+- type: CP14Knowledge
   id: Warcraft
   name: cp14-skill-name-warcraft
   desc: cp14-skill-desc-warcraft
 
-- type: CP14Skill
+- type: CP14Knowledge
   id: Firearms
   name: cp14-skill-name-firearms
   desc: cp14-skill-desc-firearms
