--- a/Resources/Prototypes/_CP14/Recipes/Workbench/sewing_table.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/sewing_table.yml
@@ -8,6 +8,7 @@
   stacks:
     CP14Cloth: 2
   result: CP14ClothingShirtCottonBlue
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtCottonBlack
@@ -19,6 +20,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtCottonBlack
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtCottonPurple
@@ -30,6 +32,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtCottonPurple
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtCottonRed
@@ -41,6 +44,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtCottonRed
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtCottonWhite
@@ -51,6 +55,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtCottonWhite
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtCottonYellow
@@ -62,6 +67,147 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtCottonYellow
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingPantsTrouserWhite
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingPantsTrouserWhite
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingPantsTrouserDarkBlue
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeBlue: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingPantsTrouserDarkBlue
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingPantsDressBlack
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeBlack: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingPantsDressBlack
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingPantsSouthernMagician
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeYellow: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingPantsSouthernMagician
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBeretRed
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeRed: 1
+  stacks:
+    CP14Cloth: 1
+  result: CP14ClothingHeadBeretRed
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBeretPurple
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyePurple: 1
+  stacks:
+    CP14Cloth: 1
+  result: CP14ClothingHeadBeretPurple
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBeretYellow
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeYellow: 1
+  stacks:
+    CP14Cloth: 1
+  result: CP14ClothingHeadBeretYellow
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBeretBlue
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeBlue: 1
+  stacks:
+    CP14Cloth: 1
+  result: CP14ClothingHeadBeretBlue
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBeretBlack
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeBlack: 1
+  stacks:
+    CP14Cloth: 1
+  result: CP14ClothingHeadBeretBlack
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBandanaWhite
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingHeadBandanaWhite
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadBandanaYellow
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14String: 1
+    CP14DyeYellow: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingHeadBandanaYellow
+  knowledgeRequired: T1_ClothingSewing
+
+- type: CP14Recipe
+  id: CP14ClothingHeadWreath
+  tag: CP14RecipeSewing
+  craftTime: 2
+  entities:
+    CP14BloodFlower: 2
+    CP14Dayflin: 2
+  result: CP14ClothingHeadWreath
+  knowledgeRequired: T1_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtMercenary
@@ -74,6 +220,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtMercenary
+  knowledgeRequired: T2_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingShirtYellowWizard
@@ -87,137 +234,7 @@
   stacks:
     CP14Cloth: 3
   result: CP14ClothingShirtYellowWizard
-
-- type: CP14Recipe
-  id: CP14ClothingPantsTrouserWhite
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingPantsTrouserWhite
-
-- type: CP14Recipe
-  id: CP14ClothingPantsTrouserDarkBlue
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeBlue: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingPantsTrouserDarkBlue
-
-- type: CP14Recipe
-  id: CP14ClothingPantsDressBlack
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeBlack: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingPantsDressBlack
-
-- type: CP14Recipe
-  id: CP14ClothingPantsSouthernMagician
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeYellow: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingPantsSouthernMagician
-
-- type: CP14Recipe
-  id: CP14ClothingPantsMercenaryTrousers
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeBlue: 1
-    CP14DyeRed: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingPantsMercenaryTrousers
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBeretRed
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeRed: 1
-  stacks:
-    CP14Cloth: 1
-  result: CP14ClothingHeadBeretRed
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBeretPurple
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyePurple: 1
-  stacks:
-    CP14Cloth: 1
-  result: CP14ClothingHeadBeretPurple
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBeretYellow
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeYellow: 1
-  stacks:
-    CP14Cloth: 1
-  result: CP14ClothingHeadBeretYellow
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBeretBlue
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeBlue: 1
-  stacks:
-    CP14Cloth: 1
-  result: CP14ClothingHeadBeretBlue
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBeretBlack
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeBlack: 1
-  stacks:
-    CP14Cloth: 1
-  result: CP14ClothingHeadBeretBlack
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBandanaWhite
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingHeadBandanaWhite
-
-- type: CP14Recipe
-  id: CP14ClothingHeadBandanaYellow
-  tag: CP14RecipeSewing
-  craftTime: 2
-  entities:
-    CP14String: 1
-    CP14DyeYellow: 1
-  stacks:
-    CP14Cloth: 2
-  result: CP14ClothingHeadBandanaYellow
+  knowledgeRequired: T2_ClothingSewing
 
 - type: CP14Recipe
   id: CP14ClothingHeadBeretMercenary
@@ -230,15 +247,20 @@
   stacks:
     CP14Cloth: 2
   result: CP14ClothingHeadBeretMercenary
+  knowledgeRequired: T2_ClothingSewing
 
 - type: CP14Recipe
-  id: CP14ClothingHeadWreath
+  id: CP14ClothingPantsMercenaryTrousers
   tag: CP14RecipeSewing
   craftTime: 2
   entities:
-    CP14BloodFlower: 2
-    CP14Dayflin: 2
-  result: CP14ClothingHeadWreath
+    CP14String: 1
+    CP14DyeBlue: 1
+    CP14DyeRed: 1
+  stacks:
+    CP14Cloth: 2
+  result: CP14ClothingPantsMercenaryTrousers
+  knowledgeRequired: T2_ClothingSewing
 
 # Wallpaper (TODO: Move to separate workbench?)
 
@@ -251,6 +273,7 @@
   entities:
     CP14DyeBlack: 1
   result: CP14WallpaperBlack
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperGreen
@@ -261,6 +284,7 @@
   entities:
     CP14DyeGreen: 1
   result: CP14WallpaperGreen
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperPurple
@@ -271,6 +295,7 @@
   entities:
     CP14DyePurple: 1
   result: CP14WallpaperPurple
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperRed
@@ -281,6 +306,7 @@
   entities:
     CP14DyeRed: 1
   result: CP14WallpaperRed
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperWhite
@@ -289,6 +315,7 @@
   stacks:
     CP14Cloth: 10
   result: CP14WallpaperWhite
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperWhite2
@@ -297,6 +324,7 @@
   stacks:
     CP14Cloth: 10
   result: CP14WallpaperWhite2
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14WallpaperYellow
@@ -307,6 +335,7 @@
   entities:
     CP14DyeYellow: 1
   result: CP14WallpaperYellow
+  knowledgeRequired: T1_WallpaperCraft
 
 - type: CP14Recipe
   id: CP14CrayonBlack
