knowledge learning objects

--- a/Resources/Prototypes/_CP14/Entities/Objects/Misc/crayons.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Misc/crayons.yml
@@ -24,6 +24,9 @@
         type: CrayonBoundUserInterface
   - type: Crayon
     capacity: 15
+  - type: CP14KnowledgeLearningSource
+    knowledges:
+    - T1_WallpaperCraft
 
 - type: entity
   parent: CP14Crayon
