--- a/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/anvil.yml
@@ -6,6 +6,7 @@
     CP14WoodenPlanks: 2
     CP14IronBar: 2
   result: CP14BaseShield
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14BaseCrowbar
@@ -14,6 +15,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14BaseCrowbar
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14BaseWrench
@@ -22,6 +24,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14BaseWrench
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ClothingCloakCuirass
@@ -30,6 +33,7 @@
   stacks:
     CP14IronBar: 5
   result: CP14ClothingCloakCuirass
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ClothingCloakInfantryCuirass
@@ -38,6 +42,7 @@
   stacks:
     CP14IronBar: 6
   result: CP14ClothingCloakInfantryCuirass
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ClothingCloakCuirassLoincloth
@@ -46,6 +51,7 @@
   stacks:
     CP14IronBar: 6
   result: CP14ClothingCloakCuirassLoincloth
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ClothingCloakCuirassLeg
@@ -54,6 +60,7 @@
   stacks:
     CP14IronBar: 7
   result: CP14ClothingCloakCuirassLeg
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14Nail10
@@ -62,6 +69,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14Nail10
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14CrystalLampBlueEmpty
@@ -71,6 +79,7 @@
     CP14CopperBar: 2
     CP14IronBar: 1
   result: CP14CrystalLampBlueEmpty
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14CrystalLampOrangeEmpty
@@ -80,6 +89,7 @@
     CP14CopperBar: 2
     CP14IronBar: 1
   result: CP14CrystalLampOrangeEmpty
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14Scissors
@@ -88,6 +98,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14Scissors
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ClothingCloakBrassArmor
@@ -96,6 +107,7 @@
   stacks:
     CP14CopperBar: 6
   result: CP14ClothingCloakBrassArmor
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14Crossbolt
@@ -104,6 +116,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14Crossbolt
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14BaseLockpick
@@ -112,6 +125,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14BaseLockpick
+  knowledgeRequired: T1_MetallForging
 
 # Dagger
 
@@ -122,6 +136,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronDagger
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldDagger
@@ -130,6 +145,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldDagger
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperDagger
@@ -138,6 +154,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperDagger
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilDagger
@@ -146,6 +163,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilDagger
+  knowledgeRequired: T1_MetallForging
 
 # Spear
 
@@ -156,6 +174,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronSpear
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSpear
@@ -164,6 +183,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperSpear
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSpear
@@ -172,6 +192,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldSpear
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSpear
@@ -180,6 +201,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilSpear
+  knowledgeRequired: T1_MetallForging
 
 # Mace
 
@@ -190,6 +212,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronMace
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldMace
@@ -198,6 +221,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldMace
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperMace
@@ -206,6 +230,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperMace
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilMace
@@ -214,6 +239,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilMace
+  knowledgeRequired: T1_MetallForging
 
 # Sword
 
@@ -224,6 +250,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14ModularBladeIronSword
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSword
@@ -232,6 +259,7 @@
   stacks:
     CP14GoldBar: 2
   result: CP14ModularBladeGoldSword
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSword
@@ -240,6 +268,7 @@
   stacks:
     CP14CopperBar: 2
   result: CP14ModularBladeCopperSword
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSword
@@ -248,6 +277,7 @@
   stacks:
     CP14MithrilBar: 2
   result: CP14ModularBladeMithrilSword
+  knowledgeRequired: T1_MetallForging
 
 # Sickle
 
@@ -258,6 +288,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronSickle
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperSickle
@@ -266,6 +297,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperSickle
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldSickle
@@ -274,6 +306,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldSickle
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilSickle
@@ -282,6 +315,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilSickle
+  knowledgeRequired: T1_MetallForging
 
 # Shovel
 
@@ -292,6 +326,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronShovel
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldShovel
@@ -300,6 +335,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldShovel
+  knowledgeRequired: T1_MetallForging
 
 
 - type: CP14Recipe
@@ -309,6 +345,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperShovel
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilShovel
@@ -317,6 +354,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilShovel
+  knowledgeRequired: T1_MetallForging
 
 # Pickaxe
 
@@ -327,6 +365,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronPickaxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldPickaxe
@@ -335,6 +374,7 @@
   stacks:
     CP14GoldBar: 2
   result: CP14ModularBladeGoldPickaxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperPickaxe
@@ -343,6 +383,7 @@
   stacks:
     CP14CopperBar: 2
   result: CP14ModularBladeCopperPickaxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilPickaxe
@@ -351,6 +392,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilPickaxe
+  knowledgeRequired: T1_MetallForging
 
 # Grip
 
@@ -361,6 +403,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularGripIron
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripCopper
@@ -369,6 +412,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularGripCopper
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripGolden
@@ -377,6 +421,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularGripGolden
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripMithril
@@ -385,6 +430,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularGripMithril
+  knowledgeRequired: T1_MetallForging
 
 # Grip long
 
@@ -395,6 +441,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14ModularGripIronLong
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripCopperLong
@@ -403,6 +450,7 @@
   stacks:
     CP14CopperBar: 2
   result: CP14ModularGripCopperLong
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripGoldLong
@@ -411,6 +459,7 @@
   stacks:
     CP14GoldBar: 2
   result: CP14ModularGripGoldLong
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGripMithrilLong
@@ -419,6 +468,7 @@
   stacks:
     CP14MithrilBar: 2
   result: CP14ModularGripMithrilLong
+  knowledgeRequired: T1_MetallForging
 
 # Rapier
 
@@ -429,6 +479,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularBladeIronRapier
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldRapier
@@ -437,6 +488,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularBladeGoldRapier
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperRapier
@@ -445,6 +497,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularBladeCopperRapier
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilRapier
@@ -453,6 +506,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularBladeMithrilRapier
+  knowledgeRequired: T1_MetallForging
 
 # Axe
 
@@ -463,6 +517,7 @@
   stacks:
     CP14IronBar: 2
   result: CP14ModularBladeIronAxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeCopperAxe
@@ -471,6 +526,7 @@
   stacks:
     CP14CopperBar: 2
   result: CP14ModularBladeCopperAxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeGoldAxe
@@ -479,6 +535,7 @@
   stacks:
     CP14GoldBar: 2
   result: CP14ModularBladeGoldAxe
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularBladeMithrilAxe
@@ -487,6 +544,7 @@
   stacks:
     CP14MithrilBar: 2
   result: CP14ModularBladeMithrilAxe
+  knowledgeRequired: T1_MetallForging
 
 # Sharp garde
 
@@ -497,6 +555,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularGardeSharpCopper
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSharpIron
@@ -505,6 +564,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularGardeSharpIron
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSharpGold
@@ -513,6 +573,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularGardeSharpGold
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSharpMithril
@@ -521,6 +582,7 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularGardeSharpMithril
+  knowledgeRequired: T1_MetallForging
 
 # Sturdy garde
 
@@ -531,6 +593,7 @@
   stacks:
     CP14CopperBar: 1
   result: CP14ModularGardeSturdyCopper
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSturdyIron
@@ -539,6 +602,7 @@
   stacks:
     CP14IronBar: 1
   result: CP14ModularGardeSturdyIron
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSturdyGold
@@ -547,6 +611,7 @@
   stacks:
     CP14GoldBar: 1
   result: CP14ModularGardeSturdyGold
+  knowledgeRequired: T1_MetallForging
 
 - type: CP14Recipe
   id: CP14ModularGardeSturdyMithril
@@ -555,3 +620,4 @@
   stacks:
     CP14MithrilBar: 1
   result: CP14ModularGardeSturdyMithril
+  knowledgeRequired: T1_MetallForging
